--- a/_posts/lich-thien-van/nam2022/thang1/2022-01-18-trang-tron.html
+++ b/_posts/lich-thien-van/nam2022/thang1/2022-01-18-trang-tron.html
@@ -20,5 +20,5 @@ image: trang-tron
 
 <p class="text-white">Mặt Trăng sẽ xuất hiện phía đối diện với Mặt Trời và bề mặt của nó sẽ phản xạ tối đa ánh sáng Mặt Trời về phía Trái Đất.</p>
 <p class="text-white">Quá trình này sẽ diễn ra vào 06:34 UTC+7 (giờ Việt Nam).</p>
-<p class="text-white">Vào tháng giêng, giữa những đợt tuyết lạnh và sâu giữa mùa đông, bầy sói gào thét dữ dội bên ngoài những ngôi làng của người Mỹ bản địa. Do đó, dân làng bắt đầu gọi trăng tròn tháng giêng là Mặt trăng sói.</p>
+<p class="text-white">Vào tháng giêng, giữa những đợt tuyết lạnh và sâu giữa mùa đông, bầy sói gào thét dữ dội bên ngoài những ngôi làng của người Mỹ bản địa. Do đó, dân làng bắt đầu gọi trăng tròn tháng giêng là Mặt trăng sói. Sói hú rình mò bên ngoài làng của họ trong những tháng mùa đông để giao tiếp với nhau, có thể là cảnh báo hoặc gửi tín hiệu hướng dẫn những con sói khác đến một vị trí mới hoặc đến chỗ con mồi.</p>
 <p class="text-white">Lần trăng tròn này cũng còn được gọi là Trăng Già hay Trăng Sau Lễ Giáng Sinh. Một số bộ lạc gọi trăng tròn tháng một là Mặt trăng tuyết, nhưng hầu hết các bộ lạc đã áp dụng tên đó cho trăng tròn của tháng hai.</p>
