--- a/_posts/lich-thien-van/nam2022/thang4/2022-04-17-trang-tron.html
+++ b/_posts/lich-thien-van/nam2022/thang4/2022-04-17-trang-tron.html
@@ -20,5 +20,5 @@ image: trang-tron
 
 <p class="text-white">Mặt Trăng sẽ xuất hiện phía đối diện với Mặt Trời và bề mặt của nó sẽ phản xạ tối đa ánh sáng Mặt Trời về phía Trái Đất.</p>
 <p class="text-white">Quá trình này sẽ diễn ra vào 01:57 UTC+7 (giờ Việt Nam).</p>
-<p class="text-white">Lần trăng tròn này được những bộ lạc bản địa đầu tiên ở Mỹ gọi là Trăng Hồng bởi nó đánh dấu thời điểm xuất hiện của loài cỏ hồng rêu, hoặc loài địa giáp trúc hoang, là một trong những loài hoa mọc sớm nhất vào mùa xuân.</p>
+<p class="text-white">Lần trăng tròn này được những bộ lạc bản địa đầu tiên ở Mỹ gọi là Trăng Hồng bởi nó đánh dấu thời điểm xuất hiện của loài hoa rêu màu hồng, hoặc loài địa giáp trúc hoang, là một trong những loài hoa mọc sớm nhất vào mùa xuân.</p>
 <p class="text-white">Mặt trăng hồng của tháng 4 đôi khi được gọi bằng các tên liên quan đến các dấu hiệu khác của mùa xuân đầy đủ. Ở các nền văn hóa khác, trăng tròn này đôi khi được gọi là Mặt trăng cỏ mọc, Mặt trăng trứng và trong số các bộ lạc ven biển là Mặt trăng cá, bởi vì đây là thời gian mà loài cá bơi ngược dòng để sinh sản.</p>
