--- a/_posts/kien-thuc/ngoi-sao/2021-08-01-ban-do-sao.html
+++ b/_posts/kien-thuc/ngoi-sao/2021-08-01-ban-do-sao.html
@@ -34,7 +34,7 @@ image: ban-do-sao
                     <p class="text-white margin-30px-bottom"><strong>Hướng dẫn:</strong> Di chuyển bằng chuột và phóng to / thu nhỏ bằng con lăn chuột. Nhấp vào tên của một ngôi sao để tìm hiểu thêm về nó.</p>
                     <p class="text-white margin-30px-bottom"><i>Lưu ý: Hãy nhấn "Xem toàn màn hình" để có trải nghiệm tốt nhất.</i></p>
                     <div class="margin-30px-bottom">
-                        <a target="_blank" class="open-new-tab" href="{{ site.baseurl }}/app/ngoi-sao/star-map"><i class="feather icon-feather-maximize margin-10px-right"></i> Xem toàn màn hình</a>
+                        <a target="_blank" class="open-new-tab" href="{{ site.baseurl }}/app/ngoi-sao/star-map/"><i class="feather icon-feather-maximize margin-10px-right"></i> Xem toàn màn hình</a>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@ image: ban-do-sao
                         <div class="iframe_box">
                             <iframe 
                                 id="fullscreen"
-                                src="{{ site.baseurl }}/app/ngoi-sao/star-map" 
+                                src="{{ site.baseurl }}/app/ngoi-sao/star-map/" 
                                 title="Bản Đồ Sao"
                             >
                             </iframe>
